--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -57,13 +57,44 @@ title: Competition Coffee | Contact
                   
                   <div class="interested">
                       <ul>
-                          <li><input type="checkbox">Coffee</li>
-                          <li></li><input type="checkbox">Office Snacks</li>
-                          <li><input type="checkbox">Paper & Cleaning</li>
-                          <li><input type="checkbox">Supplies(Offiece Grocery)</li>
-                          <li><input type="checkbox">Cold Beverages</li>
-                          <li><input type="checkbox">Vending</li>
+                          <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squaredOne"/>
+                              <label for="squaredOne"></label>
+                              </div>
+                              Coffee
+                              </li>
+                              <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squared1"/>
+                              <label for="squared1"></label>
+                              </div>
+                              Office Snacks
+                              </li>
+                              <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squared2"/>
+                              <label for="squared2"></label>
+                              </div>
+                              Paper & Cleaning
+                              </li>
+                              <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squared3"/>
+                              <label for="squared3"></label>
+                              </div>
+                              Supplies(Offiece Grocery)
+                              </li>
+                              <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squared4"/>
+                              <label for="squared4"></label>
+                              </div>
+                              Cold Beverages
+                              </li>
+                              <li><div class="squaredOne">
+                              <input type="checkbox" value="None" name="check" id="squared5"/>
+                              <label for="squared5"></label>
+                              </div>
+                              Vending
+                              </li>
                       </ul>
+
                   </div>
                 <button type="submit">Submit</button>
               </form>
