--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -24,30 +24,30 @@ title: Competition Coffee | Contact
                   <input type="text" class="form-control" id="name">       
                 </div>
                 <div class="form-group half-width">
-                  <label for="name">Job Title</label>
-                  <input type="text" class="form-control" id="emailaddress">      
+                  <label for="title">Job Title</label>
+                  <input type="text" class="form-control" id="title">      
                 </div>
                 <div class="form-group half-width">
-                  <label for="name">Phone</label>
-                  <input type="text" class="form-control" id="mobilenumber">        
+                  <label for="phone">Phone</label>
+                  <input type="text" class="form-control" id="phone">        
                 </div>
                 <div class="form-group half-width">
-                    <label for="name">Email</label>
-                    <input type="text" class="form-control" id="name">       
+                    <label for="email">Email</label>
+                    <input type="text" class="form-control" id="email">       
                   </div>
                 </div>
                   <div class="form-group">
-                    <label for="name">Company Name</label>
-                    <input type="text" class="form-control" id="name">       
+                    <label for="company">Company Name</label>
+                    <input type="text" class="form-control" id="company">       
                   </div>
                   <div class="half-group">
                   <div class="form-group half-width">
-                    <label for="name">City</label>
-                    <input type="text" class="form-control" id="name">       
+                    <label for="city">City</label>
+                    <input type="text" class="form-control" id="city">       
                   </div>
                   <div class="form-group half-width">
-                    <label for="name">Postel Code</label>
-                    <input type="text" class="form-control" id="name">       
+                    <label for="postal">Postel Code</label>
+                    <input type="text" class="form-control" id="postal">       
                   </div> 
                 </div>
                   <div class="form-group">
