--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -70,51 +70,45 @@ title: Competition Coffee | Home
 		<h1>the brands you've come to trust and love</h1>
 		<div class="ccho-brands-container">
 			<div class="ccho-brands-row">
-				<img src="{{root}}static/images/brands/green-mountain-coffee.png" alt="Green Mountain Coffee">
-				<img src="{{root}}static/images/brands/starbucks.png" alt="Starbucks Coffee">
-				<img src="{{root}}static/images/brands/timothys.png" alt="Timothy's World Coffee">
-				<img src="{{root}}static/images/brands/pilot.png" alt="Pilot Coffee Roasters">
-				<img src="{{root}}static/images/brands/propeller.png" alt="Propeller Coffee Co.">
-			</div>
-			<div class="ccho-brands-row">
-				<img src="{{root}}static/images/brands/van-houtte.png" alt="Van Houtte">
-				<img src="{{root}}static/images/brands/mother-parkers.png" alt="Mother Parkers Tea & Coffee">
-				<img src="{{root}}static/images/brands/heritage.png" alt="Heritage Coffee">
-				<img src="{{root}}static/images/brands/seattles-best.png" alt="Seattle's Best Coffee">
-				<img src="{{root}}static/images/brands/barocco.png" alt="Barocco Coffee Company">
-			</div>
-			<div class="ccho-brands-row">
-				<img src="{{root}}static/images/brands/zavida.png" alt="Zavida Coffee & Tea">
-				<img src="{{root}}static/images/brands/segafredo.png" alt="Segafredo Coffee">
-				<img src="{{root}}static/images/brands/wolfgang-puck.png" alt="Wolfgang Puck Coffee">
-				<img src="{{root}}static/images/brands/tullys.png" alt="Tully's Coffee">
-				<img src="{{root}}static/images/brands/reunion-island.png" alt="Reunion Island Coffee">
-			</div>
-			<div class="ccho-brands-row">
-				<img src="{{root}}static/images/brands/genuine-tea.png" alt="Genuine Tea">
-				<img src="{{root}}static/images/brands/davids-tea.png" alt="DavidsTea">
-				<img src="{{root}}static/images/brands/serenitea.png" alt="Serenitea">
-				<img src="{{root}}static/images/brands/tazo.png" alt="Tazo Tea">
-			</div>
+				<ul>
+				<li><img src="{{root}}static/images/brands/green-mountain-coffee.png" alt="Green Mountain Coffee"></li>
+				<li><img src="{{root}}static/images/brands/starbucks.png" alt="Starbucks Coffee"></li>
+				<li><img src="{{root}}static/images/brands/timothys.png" alt="Timothy's World Coffee"></li>
+				<li><img src="{{root}}static/images/brands/pilot.png" alt="Pilot Coffee Roasters"></li>
+				<li><img src="{{root}}static/images/brands/propeller.png" alt="Propeller Coffee Co."></li>
+				<li><img src="{{root}}static/images/brands/van-houtte.png" alt="Van Houtte"></li>
+				<li><img src="{{root}}static/images/brands/mother-parkers.png" alt="Mother Parkers Tea & Coffee"></li>
+				<li><img src="{{root}}static/images/brands/heritage.png" alt="Heritage Coffee"></li>
+				<li><img src="{{root}}static/images/brands/seattles-best.png" alt="Seattle's Best Coffee"></li>
+				<li><img src="{{root}}static/images/brands/barocco.png" alt="Barocco Coffee Company"></li>
+				<li><img src="{{root}}static/images/brands/zavida.png" alt="Zavida Coffee & Tea"></li>
+				<li><img src="{{root}}static/images/brands/segafredo.png" alt="Segafredo Coffee"></li>
+				<li><img src="{{root}}static/images/brands/wolfgang-puck.png" alt="Wolfgang Puck Coffee"></li>
+				<li><img src="{{root}}static/images/brands/tullys.png" alt="Tully's Coffee"></li>
+				<li><img src="{{root}}static/images/brands/reunion-island.png" alt="Reunion Island Coffee"></li>
+				<li><img src="{{root}}static/images/brands/genuine-tea.png" alt="Genuine Tea"></li>
+				<li><img src="{{root}}static/images/brands/davids-tea.png" alt="DavidsTea"></li>
+				<li><img src="{{root}}static/images/brands/serenitea.png" alt="Serenitea"></li>
+				<li><img src="{{root}}static/images/brands/tazo.png" alt="Tazo Tea"></li>
+			</ul>
+			</div>			
 		</div>
 	</div>
 	<div class="ccho-brands competition-coffee-wrapper">
 		<h1>our equipment partners</h1>
 		<div class="ccho-brands-container">
 			<div class="ccho-equipment-row">
-				<img src="{{root}}static/images/brands/cafection-enterprises.png" alt="Cafection Enterprises">
-				<img src="{{root}}static/images/brands/brokerhouse.png" alt="Brokerhouse Distributors">
-				<img src="{{root}}static/images/brands/bunn.png" alt="Bunn">
-			</div>
-			<div class="ccho-equipment-row">
-				<img src="{{root}}static/images/brands/de-jong-duke.png" alt="De Jong Duke">
-				<img src="{{root}}static/images/brands/faema.png" alt="Faema Canada">
-				<img src="{{root}}static/images/brands/zuccarinil.png" alt="Zuccarini">
-			</div>
-			<div class="ccho-equipment-row-2">
-				<img src="{{root}}static/images/brands/keurig-canada.png" alt="Keurig Canada">
-				<img src="{{root}}static/images/brands/danamark.png" alt="Danamark Watercare">
-			</div>
+				<ul>
+				<li><img src="{{root}}static/images/brands/cafection-enterprises.png" alt="Cafection Enterprises"></li>
+				<li><img src="{{root}}static/images/brands/brokerhouse.png" alt="Brokerhouse Distributors"></li>
+				<li><img src="{{root}}static/images/brands/bunn.png" alt="Bunn"></li>
+				<li><img src="{{root}}static/images/brands/de-jong-duke.png" alt="De Jong Duke"></li>
+				<li><img src="{{root}}static/images/brands/faema.png" alt="Faema Canada"></li>
+				<li><img src="{{root}}static/images/brands/zuccarinil.png" alt="Zuccarini"></li>
+				<li><img src="{{root}}static/images/brands/keurig-canada.png" alt="Keurig Canada"></li>
+				<li><img src="{{root}}static/images/brands/danamark.png" alt="Danamark Watercare"></li>
+			</ul>
+			</div>			
 		</div>
 	</div>
 	<div class="ccho-content competition-coffee-wrapper">
