--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -12,7 +12,7 @@ title: Competition Coffee | About
 			<h1>competition coffee and refreshment services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
-			<button>Get Started</button>
+			<a href="./contact.html">Get Started</a>
 		</div>
 		<h1>Company History</h1>
 		<div class="cca-about-content-container">
@@ -79,8 +79,8 @@ title: Competition Coffee | About
 	<div class="cca-cta">
 		<div class="cca-cta-content-container">
 			<p>Get started with your<br/> office coffee and beverage<br/> services today.</p>
-			<a href="#">
-				<button>Start Now</button>
+			<a href="./contact.html">
+				Start Now
 			</a>
 		</div>
 		<div class="cca-cta-image">
