--- a/src/pages/coffee.html
+++ b/src/pages/coffee.html
@@ -12,7 +12,7 @@ title: Competition Coffee | Coffee
 			<h1>competition coffee and refreshment services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
-			<button>Get Started</button>
+			<a href="./contact.html">Get Started</a>
 		</div>
 		<h1>Coffee</h1>
 		<div class="cce-content-container">
@@ -145,8 +145,8 @@ title: Competition Coffee | Coffee
 	<div class="cce-cta cce-coffee">
 		<div class="cce-cta-content-container">
 			<p>Get started with your<br/> office coffee and beverage<br/> services today.</p>
-			<a href="#">
-				<button>Start Now</button>
+			<a href="./contact.html">
+				Start Now
 			</a>
 		</div>
 		<div class="cce-cta-image coffee-start-now">
