--- a/src/pages/equipment.html
+++ b/src/pages/equipment.html
@@ -12,7 +12,7 @@ title: Competition Coffee | Equipment
 			<h1>competition coffee and refreshment services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
-			<button>Get Started</button>
+			<a href="./contact.html">Get Started</a>
 		</div>
 		<h1>Equipment</h1>
 		<div class="cce-content-container">
@@ -284,9 +284,7 @@ title: Competition Coffee | Equipment
 	<div class="cce-cta">
 		<div class="cce-cta-content-container">
 			<p>Get started with your<br/> office coffee and beverage<br/> services today.</p>
-			<a href="#">
-				<button>Start Now</button>
-			</a>
+			<a href="./contact.html">Start Now</a>
 		</div>
 		<div class="cce-cta-image">
 			<img src="{{root}}static/images/cta-image.png" alt="">
