--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -11,8 +11,8 @@ title: Competition Coffee | Home
 					The finest coffee and tea the world has to offer… Don’t your hard working and dedicated employees deserve it?
 				</h3>
 				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
-				<a href="#">
-					<button>Contact Us</button>
+				<a href="./contact.html">
+					Contact Us
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
@@ -25,8 +25,8 @@ title: Competition Coffee | Home
 					You have the right to choose… Having both healthy and indulgent snacks at work is the most impactful and most affordable benefit you can provide to enhance the daily office experience. 
 				</h3>
 				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
-				<a href="#">
-					<button>Contact Us</button>
+				<a href="./contact.html">
+					Contact Us
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
@@ -39,8 +39,7 @@ title: Competition Coffee | Home
 					Fresh, pure filtered and perfectly chilled drinking water using today’s safest and most technologically advanced water systems are available with a click of this button. 
 				</h3>
 				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
-				<a href="#">
-					<button>Contact Us</button>
+				<a href="./contact.html">Contact Us
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
@@ -147,8 +146,8 @@ title: Competition Coffee | Home
 	<div class="ccho-cta">
 		<div class="ccho-cta-content-container">
 			<p>Get started with your<br/> office coffee and beverage<br/> services today.</p>
-			<a href="#">
-				<button>Start Now</button>
+			<a href="./contact.html">
+				Start Now
 			</a>
 		</div>
 		<div class="ccho-cta-image">
