--- a/src/pages/snacks.html
+++ b/src/pages/snacks.html
@@ -12,7 +12,7 @@ title: Competition Coffee | Snacks
 			<h1>competition coffee and refreshment services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
-			<button>Get Started</button>
+			<a href="./contact.html">Get Started</a>
 		</div>
 		<h1>OFFICE REFRESHMENTS AND SNACKING</h1>
 		<div class="cca-snacks-content-container">
@@ -25,7 +25,7 @@ title: Competition Coffee | Snacks
 			</div>
 		</div>
 	</div>
-	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper">
+	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper competition-snacks-wrapper">
 		<div class="cca-about-content-image">
 			<img src="{{root}}static/images/eska-water.png" alt="">
 		</div>
@@ -189,8 +189,7 @@ title: Competition Coffee | Snacks
 	<div class="cca-cta">
 		<div class="cca-cta-content-container">
 			<p>Get started with your<br/> office coffee and beverage<br/> services today.</p>
-			<a href="#">
-				<button>Start Now</button>
+			<a href="./contact.html">Start Now</a>
 			</a>
 		</div>
 		<div class="cca-cta-image">
