--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -12,7 +12,7 @@ title: Competition Coffee | Contact
 			<h1>competition coffee and refreshment services</h1>
 			<p>We provide custom-tailored coffee and refreshment programs you need at work.</p>
 			<p><strong>For a FREE QUOTE, contact us now at: 416-429-6111</strong></p>
-			<button>Get Started</button>
+			<a href="./contact.html">Get Started</a>
 		</div>
 		<h1>Contact</h1>
 		<div class="cce-content-container">
@@ -21,38 +21,38 @@ title: Competition Coffee | Contact
                 <div class="half-group">
                 <div class="form-group half-width">
                   <label for="name">Full Name</label>
-                  <input type="text" class="form-control" id="name">       
+                  <input type="text" requiored class="form-control" id="name">       
                 </div>
                 <div class="form-group half-width">
                   <label for="title">Job Title</label>
-                  <input type="text" class="form-control" id="title">      
+                  <input type="text" requiored class="form-control" id="title">      
                 </div>
                 <div class="form-group half-width">
                   <label for="phone">Phone</label>
-                  <input type="text" class="form-control" id="phone">        
+                  <input type="text" requiored class="form-control" id="phone">        
                 </div>
                 <div class="form-group half-width">
                     <label for="email">Email</label>
-                    <input type="text" class="form-control" id="email">       
+                    <input type="text" requiored class="form-control" id="email">       
                   </div>
                 </div>
                   <div class="form-group">
                     <label for="company">Company Name</label>
-                    <input type="text" class="form-control" id="company">       
+                    <input type="text" requiored class="form-control" id="company">       
                   </div>
                   <div class="half-group">
                   <div class="form-group half-width">
                     <label for="city">City</label>
-                    <input type="text" class="form-control" id="city">       
+                    <input type="text" requiored class="form-control" id="city">       
                   </div>
                   <div class="form-group half-width">
                     <label for="postal">Postel Code</label>
-                    <input type="text" class="form-control" id="postal">       
+                    <input type="text" required class="form-control" id="postal">       
                   </div> 
                 </div>
                   <div class="form-group">
                     <label for="name">Message</label>
-                    <textarea></textarea>       
+                    <textarea required></textarea>       
                   </div> 
                   
                   <div class="interested">
