commit all new changes

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,7 +5,7 @@ title: Competition Coffee | About
 
 <section class="competition-coffee-about">
 	<div class="cca-hero">
-		<img src="{{root}}static/images/about-hero.png" alt="">
+		<img src="{{root}}static/images/about-hero.jpg" alt="">
 	</div>
 	<div class="cca-about-content-box competition-coffee-wrapper">
 		<div class="cca-hero-circle">
@@ -23,7 +23,7 @@ title: Competition Coffee | About
 				<p>Whether it’s traditional coffee brewers, technically-advanced environmentally-friendly “single-cup” hot beverage systems, popular coffee or tea cartridge systems, pod or espresso systems, water coolers and filtration systems, we’re sure to satisfy your every office or workplace beverage need.</p>
 				<p>Thank-you for your confidence.</p>
 			</div>
-			<div class="cca-about-content-image">
+			<div class="cca-about-content-image first-about-content-image">
 				<img src="{{root}}static/images/about-1977.png" alt="">
 			</div>
 		</div>
@@ -46,7 +46,7 @@ title: Competition Coffee | About
 			</ul>
 		</div>
 	</div>
-	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper">
+	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper filtered-water">
 		<div class="cca-about-content-image">
 			<img src="{{root}}static/images/filtered-water-systems.png" alt="">
 		</div>
@@ -55,7 +55,7 @@ title: Competition Coffee | About
 			<p>Water filtration systems on rental with free water filtration.</p>
 		</div>
 	</div>
-	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper">
+	<div class="cca-about-content-box cca-about-content-box-flex competition-coffee-wrapper getting-started">
 		<div class="cca-about-content-copy">
 			<h1>Getting Started</h1>
 			<p>“Knowledge is power.” Accurate information and hence, knowledge, helps to build opinions and brings confidence to decision making. Choosing your office coffee and refreshment provider is a significant decision. With accurate and thorough information on product costing, our “no hidden cost guarantee,“ and our flexible payment scheduling, your procurement team can rest easy that Competition Coffee and Refreshment Services is your trusted partner.</p>
@@ -84,7 +84,7 @@ title: Competition Coffee | About
 			</a>
 		</div>
 		<div class="cca-cta-image">
-			<img src="{{root}}static/images/cta-image.png" alt="">
+			<img src="{{root}}static/images/abt-cta-image.png" alt="">
 		</div>
 	</div>
 </section>
