--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -16,37 +16,37 @@ title: Competition Coffee | Contact
 		</div>
 		<h1>Contact</h1>
 		<div class="cce-content-container">
-            <form>
+            <form class="contactform">
                 <p>Please complete this form to get started with Competition Coffee office coffee and beverage services today</p>
                 <div class="half-group">
                 <div class="form-group half-width">
                   <label for="name">Full Name</label>
-                  <input type="text" requiored class="form-control" id="name">       
+                  <input type="text" required class="form-control" id="name">       
                 </div>
                 <div class="form-group half-width">
                   <label for="title">Job Title</label>
-                  <input type="text" requiored class="form-control" id="title">      
+                  <input type="text" required class="form-control" id="title">      
                 </div>
                 <div class="form-group half-width">
                   <label for="phone">Phone</label>
-                  <input type="text" requiored class="form-control" id="phone">        
+                  <input type="text" required class="form-control" id="phone">        
                 </div>
                 <div class="form-group half-width">
                     <label for="email">Email</label>
-                    <input type="text" requiored class="form-control" id="email">       
+                    <input type="text" required class="form-control" id="email">       
                   </div>
                 </div>
                   <div class="form-group">
                     <label for="company">Company Name</label>
-                    <input type="text" requiored class="form-control" id="company">       
+                    <input type="text" required class="form-control" id="company">       
                   </div>
                   <div class="half-group">
                   <div class="form-group half-width">
                     <label for="city">City</label>
-                    <input type="text" requiored class="form-control" id="city">       
+                    <input type="text" required class="form-control" id="city">       
                   </div>
                   <div class="form-group half-width">
-                    <label for="postal">Postel Code</label>
+                    <label for="postal">Postal Code</label>
                     <input type="text" required class="form-control" id="postal">       
                   </div> 
                 </div>
@@ -56,6 +56,7 @@ title: Competition Coffee | Contact
                   </div> 
                   
                   <div class="interested">
+                    <h2>I’m interested in:</h2>
                       <ul>
                           <li><div class="squaredOne">
                               <input type="checkbox" value="None" name="check" id="squaredOne"/>
@@ -96,7 +97,7 @@ title: Competition Coffee | Contact
                       </ul>
 
                   </div>
-                <button type="submit">Submit</button>
+                <button type="button" class="chkcontact">Submit</button>
               </form>
 		</div>
 	</div>	
