--- a/src/pages/equipment.html
+++ b/src/pages/equipment.html
@@ -5,7 +5,7 @@ title: Competition Coffee | Equipment
 
 <section class="competition-coffee-equipment">
 	<div class="cce-hero">
-		<img src="{{root}}static/images/equipment-hero.png" alt="">
+		<img src="{{root}}static/images/equipment-hero.jpg" alt="">
 	</div>
 	<div class="cce-content-box competition-coffee-wrapper">
 		<div class="cce-hero-circle">
@@ -287,7 +287,7 @@ title: Competition Coffee | Equipment
 			<a href="./contact.html">Start Now</a>
 		</div>
 		<div class="cce-cta-image">
-			<img src="{{root}}static/images/cta-image.png" alt="">
+			<img src="{{root}}static/images/eq-cta-image.png" alt="">
 		</div>
 	</div>
 </section>
