--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -8,7 +8,8 @@ title: Competition Coffee | Home
 		<div class="carousel-cell">
 			<div class="ccho-carousel-content">
 				<h3 class="ccho-carousel-large-copy">
-					The finest coffee and tea the world has to offer… Don’t your hard working and dedicated employees deserve it?
+					Imagine this… perfectly prepared coffee & tea using world-class equipment of your choosing, expertly installed and maintained by our passionate technicians.
+
 				</h3>
 				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
 				<a href="./contact.html">
@@ -22,7 +23,7 @@ title: Competition Coffee | Home
 		<div class="carousel-cell">
 			<div class="ccho-carousel-content">
 				<h3 class="ccho-carousel-large-copy">
-					You have the right to choose… Having both healthy and indulgent snacks at work is the most impactful and most affordable benefit you can provide to enhance the daily office experience. 
+					The finest coffee and tea the world has to offer… Don’t your hard working and dedicated employees deserve it?
 				</h3>
 				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
 				<a href="./contact.html">
@@ -30,7 +31,20 @@ title: Competition Coffee | Home
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
-				<img src="{{root}}static/images/carousel-image.png" alt="">
+				<img src="{{root}}static/images/carousel-image1.png" alt="">
+			</div>
+		</div>
+		<div class="carousel-cell">
+			<div class="ccho-carousel-content">
+				<h3 class="ccho-carousel-large-copy">
+					You have the right to choose… Having both healthy and indulgent snacks at work is the most impactful and most affordable benefit you can provide to enhance the daily office experience. 
+				</h3>
+				<p>GET A FREE TRIAL AND QUOTE WHEN YOU</p>
+				<a href="./contact.html">Contact Us
+				</a>
+			</div>
+			<div class="ccho-carousel-image">
+				<img src="{{root}}static/images/carousel-image2.png" alt="">
 			</div>
 		</div>
 		<div class="carousel-cell">
@@ -43,7 +57,7 @@ title: Competition Coffee | Home
 				</a>
 			</div>
 			<div class="ccho-carousel-image">
-				<img src="{{root}}static/images/carousel-image.png" alt="">
+				<img src="{{root}}static/images/carousel-image3.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -52,11 +66,11 @@ title: Competition Coffee | Home
 			<h1>Here's How It Works</h1>
 			<div class="ccho-content-copy-container">
 				<div class="ccho-content-copy ccho-content-copy-steps">
-					<h3>Step 1</h3>
+					<h3>Step 1:</h3>
 					<p><strong>Contact us to learn about our office programs.</strong></p>
-					<h3>Step 2</h3>
+					<h3>Step 2:</h3>
 					<p><strong>We’ll provide you with pricing, equipment suggestions and service options.</strong></p>
-					<h3>Step 3</h3>
+					<h3>Step 3:</h3>
 					<p><strong>We’ll professionally deliver, rotate and merchandise all of your supplies and maintain your coffee equipment on a regular basis.</strong></p>
 				</div>
 				<div class="ccho-content-image--large">
@@ -90,7 +104,30 @@ title: Competition Coffee | Home
 				<li><img src="{{root}}static/images/brands/serenitea.png" alt="Serenitea"></li>
 				<li><img src="{{root}}static/images/brands/tazo.png" alt="Tazo Tea"></li>
 			</ul>
-			</div>			
+			</div>
+			<div class="ccho-brands-row ccho-mobile-brands-row">
+				<div class="carousel" data-flickity='{ "groupCells": true,"autoPlay": true }'>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/green-mountain-coffee.png" alt="Green Mountain Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/starbucks.png" alt="Starbucks Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/timothys.png" alt="Timothy's World Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/pilot.png" alt="Pilot Coffee Roasters"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/propeller.png" alt="Propeller Coffee Co."></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/van-houtte.png" alt="Van Houtte"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/mother-parkers.png" alt="Mother Parkers Tea & Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/heritage.png" alt="Heritage Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/seattles-best.png" alt="Seattle's Best Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/barocco.png" alt="Barocco Coffee Company"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/zavida.png" alt="Zavida Coffee & Tea"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/segafredo.png" alt="Segafredo Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/wolfgang-puck.png" alt="Wolfgang Puck Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/tullys.png" alt="Tully's Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/reunion-island.png" alt="Reunion Island Coffee"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/genuine-tea.png" alt="Genuine Tea"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/davids-tea.png" alt="DavidsTea"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/serenitea.png" alt="Serenitea"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/tazo.png" alt="Tazo Tea"></div>
+				  </div>
+			</div>						
 		</div>
 	</div>
 	<div class="ccho-brands competition-coffee-wrapper">
@@ -107,10 +144,22 @@ title: Competition Coffee | Home
 				<li><img src="{{root}}static/images/brands/keurig-canada.png" alt="Keurig Canada"></li>
 				<li><img src="{{root}}static/images/brands/danamark.png" alt="Danamark Watercare"></li>
 			</ul>
-			</div>			
+			</div>
+			<div class="ccho-brands-row ccho-mobile-brands-row  equip-partners">
+				<div class="carousel" data-flickity='{ "groupCells": true,"autoPlay": true }'>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/cafection-enterprises.png" alt="Cafection Enterprises"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/brokerhouse.png" alt="Brokerhouse Distributors"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/bunn.png" alt="Bunn"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/de-jong-duke.png" alt="De Jong Duke"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/faema.png" alt="Faema Canada"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/zuccarinil.png" alt="Zuccarini"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/keurig-canada.png" alt="Keurig Canada"></div>
+					<div class="carousel-cell"><img src="{{root}}static/images/brands/danamark.png" alt="Danamark Watercare"></div>					
+				  </div>
+			</div>				
 		</div>
 	</div>
-	<div class="ccho-content competition-coffee-wrapper">
+	<div class="ccho-content competition-coffee-wrapper snacks-details-wrapper">
 		<div class="ccho-content-container">
 			<div class="ccho-content-copy-container">
 				<div class="ccho-content-image--medium">
